Risolto errore in download.